===========================================

New Features:

  - Added DSC-IT 100 Security System integration (IP to serial), Greg Rapp
  - Lagarto server (panStamps) integration, Daniel Berenguer
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)
  - HTTP protocol: methods GET, POST, PUT and DELETE are now supported.
    For HTTP/JSON return documents, a JSON Path expression is supported.
    Internally, the implementation has been converted to use URIs instead 
    of URLs which resolves an issue with lack of encoding of HTTP parameters 
    which contain which contain white spaces or other special characters 
    (Marcus Redeker)
  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches
  - Shell Command Execution: polling interval and regular expression
    filtering on return values supported, including regexp groups to 
    read in multiple sensor values at once. Support for using shell
    commands with sliders added.
  - Telnet: polling interval property added
  - Date/Time : values updated once per minute instead of once per second
  - TCP & UDP : send hex values by prefixing command data with '0x' string


Bug Fixes:

  - Performance fix to sensor state cache queries (Marcus Redeker)
  - Runtime performance optimization to avoid unnecessary XML 
    parsing/XPath use (ORCJAVA-190)
  - Fix for JSON REST request return values (Richard Turner, ORCJAVA-254)
  - Rework logout requests and added CORS headers (Richard Turner, ORCJAVA-255)
  - Internal API : concurrency and call control on Deployer start 
    controller calls (ORCJAVA-179)  
  

Controller 2.0.1 (2012-11-21)
=============================

 - Update Web Console implementation to 2.0.0 FINAL
 - Change Tomcat runtime default logging to file size
   bound (10MB per file) instead of unlimited file
   size logging

