@@ -238,6 +238,7 @@
         <entry key = "isy99"            value-ref = "isy99CommandBuilder"/>
         <entry key = "dscit100"         value-ref = "dscit100CommandBuilder"/>
         <entry key = "lagarto"          value-ref = "lagartoCommandBuilder"/>
+        <entry key = "udpListener"      value-ref = "udpListenerCommandBuilder"/>
       </map>
     </constructor-arg>
 
@@ -270,6 +271,9 @@
 	 | extend the implementation with additional command types.
 	 +-->
 
+	<!-- UDPListener Command Builder -->
+	<bean id = "udpListenerCommandBuilder" class = "org.openremote.controller.protocol.socket.UDPListenerCommandBuilder"/>
+	
 	<!-- shellexe Command Builder -->
 	<bean id = "shellexeCommandBuilder" class = "org.openremote.controller.protocol.shellexe.ShellExeCommandBuilder"/>
 	
